StandardLine does not implement all methods of LineModel
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>